<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shuangsu.order.Summary"
    android:background="@color/background"
    android:clickable="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/summary"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:textSize="50dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/back"
        android:id="@+id/backbutton"
        android:layout_alignParentBottom="true"
        android:onClick="back"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Visa Payment Button"
        android:textColor="@android:color/black"
        android:id="@+id/btn_vxo"
        android:onClick="onButtonSelection"
        android:layout_alignTop="@+id/backbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/btn_vxo"
        android:layout_alignEnd="@+id/btn_vxo"
        android:layout_above="@+id/backbutton">


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/tableLayout">

                <TableRow
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView01"
                        android:text="@string/item"
                        android:padding="20dip"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/yellow"
                        android:fontFamily="fantasy"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/TextView02"
                        android:text="@string/price"
                        android:padding="20dip"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/yellow"
                        android:fontFamily="fantasy"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/TextView03"
                        android:text="@string/quantity"
                        android:padding="20dip"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@color/yellow"
                        android:fontFamily="fantasy"
                        android:textSize="18dp"/>

                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subtotal"
                android:text="@string/subtotal"
                android:textColor="@color/yellow"
                android:fontFamily="fantasy"
                android:textSize="18dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tax"
                android:text="@string/tax"
                android:textColor="@color/yellow"
                android:fontFamily="fantasy"
                android:textSize="18dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:text="@string/total"
                android:textColor="@color/yellow"
                android:fontFamily="fantasy"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table"
                android:textColor="@color/white"
                android:textSize="20dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
